# prisma-gpt

./: .gitignore  Cargo.toml  README.md
src/: gpt.rs  main.rs  prisma.rs
