[package]
name = "prisma-gpt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prisma-gpt"
prisma-gpt = "./src/main.rs"

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] } 
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
tokio = { version = "1.14.0", features = ["full"] }

